--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
-    .attribution { position: fixed; bottom: 0; padding: 20px; width: 100%;}
+    .attribution { position: fixed; bottom: 0; padding: 10px; width: 100%;}
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -32,7 +32,8 @@
   <div class="main">
     <div class="card">
       <div class="cover">
-        <img src="./images/image-product-mobile.jpg" alt="Gabrielle Essence Eau De Parfum">
+        <img src="./images/image-product-mobile.jpg" class="m-img" alt="Gabrielle Essence Eau De Parfume">
+        <img src="./images/image-product-desktop.jpg" class="d-img" alt="Gabrielle Essence Eau De Parfume">
       </div>
       <div class="desc">
         <p class="category">perfume</p>
